# vsc-heom

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  extract_rate.py  plot_spectrum.py
examples/: annotated_input_file_example_cavity_loss.in  annotated_input_file_example_structured.in
examples/ir_spectrum_calculations/heom_cavity_loss_ir/: corr_func.out  run_alpha_0.1.in
examples/ir_spectrum_calculations/heom_mol_ir/: corr_func.out
examples/rate_theory_calculations/heom_cavity/: run_1193.18181818_15.in
examples/rate_theory_calculations/heom_cavity_loss/: run_1119.31818182_15.in  run_1119.31818182_15.out
examples/rate_theory_calculations/heom_cavity_loss_2d/couple_Q/: run_1163.79310345_20.in  run_1163.79310345_20.out
examples/rate_theory_calculations/heom_cavity_loss_2d/couple_R/: run_1163.79310345_20.in
examples/rate_theory_calculations/heom_mol/: run_0.1_25.in  run_0.1_30.in
examples/rate_theory_calculations/heom_mol_2d/: run_0.0005_20.in  run_0.0005_20.out  run_1e-06_20.in  run_1e-06_20.out
src/: CMakeLists.txt  bath_correlation_terms.hpp  bath_decomposition.hpp  correlation_function_heom.hpp  heom_bath_terms.hpp  heom_operator.hpp  heom_operator_mem_efficient.hpp  heom_operator_sparse.hpp  heom_truncation.hpp  hermite_dvr.hpp  mode_data.hpp  mode_data_heom.hpp  molecular_system.hpp  molecular_system_2D.hpp  occupation_number_basis_indexing.hpp  polaritonic_system.hpp  polaritonic_system_2d.hpp  polaritonic_system_number.hpp  potential.hpp  rkf.hpp  spectral_density.hpp  superoperator_utilities.hpp
src/cmake_modules/: FindCereal.cmake  FindRapidJson.cmake
src/ir_spectrum/: main_2d_ir.cpp  main_cavity_loss_ir.cpp  main_cavity_loss_ir_2d.cpp  main_cavity_loss_ir_therm.cpp  main_ir.cpp  main_ir_therm.cpp
src/rate_theory/: main.cpp  main_2d.cpp  main_cavity.cpp  main_cavity_loss.cpp  main_cavity_loss_2d.cpp  main_cavity_loss_thermalise.cpp  main_thermalise.cpp
src/utils/: common.hpp  factory.hpp  factory_test.hpp  io.hpp  orthopol.hpp  type_info.hpp
src/utils/quadrature/: adaptive_integrate.hpp
src/utils/quadrature/gaussian_quadrature/: gauss_chebyshev_quadrature.hpp  gauss_gegenbauer_quadrature.hpp  gauss_hermite_quadrature.hpp  gauss_jacobi_quadrature.hpp  gauss_laguerre_quadrature.hpp  gauss_legendre_quadrature.hpp
src/utils/quadrature/levin/: levin_collocation.hpp  levin_collocation_old.hpp
